wazuh/wazuh_managers/wazuh-master-fb-sts.yml
# Copyright (C) 2021 Wazuh Inc.
#
# This program is a free software; you can redistribute it
# and/or modify it under the terms of the GNU General Public
# License (version 2) as published by the FSF - Free Software
# Foundation.

# Wazuh master StatefulSet

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wazuh-filebeat-master
  namespace: wazuh
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wazuh-filebeat
      node-type: master
  serviceName: wazuh-cluster
  podManagementPolicy: Parallel
  template:
    metadata:
      labels:
        app: wazuh-filebeat
        node-type: master
      name: wazuh-filebeat-master
    spec:
      volumes:
        - name: config
          configMap:
            name: wazuh-conf
        - name: filebeat-certs
          secret:
            secretName: odfe-ssl-certs
        - name: wazuh-authd-pass
          secret:
            secretName: wazuh-authd-pass
        - name: wazuh-manager-master
          persistentVolumeClaim:
            claimName: pvc-wazuh-manager
      containers:
        - name: wazuh-filebeat
          image: 'merecu/filebeat-odfe:4.2.5'
          resources:
            limits:
              cpu: 400m
              memory: 512Mi
          securityContext:
            capabilities:
              add: ["SYS_CHROOT"]
          volumeMounts:
            - name: filebeat-certs
              mountPath: /etc/ssl/root-ca.pem
              subPath: root-ca.pem
            - name: filebeat-certs
              mountPath: /etc/ssl/filebeat.pem
              subPath: filebeat.pem
            - name: filebeat-certs
              mountPath: /etc/ssl/filebeat.key
              subPath: filebeat-key.pem
            - name: wazuh-authd-pass
              mountPath: /wazuh-config-mount/etc/authd.pass
              subPath: authd.pass
            - name: wazuh-manager-master
              mountPath: /var/ossec/logs
              subPath: wazuh/var/ossec/logs
            - name: wazuh-manager-master
              mountPath: /var/lib/filebeat
              subPath: filebeat/var/lib/filebeat
