wazuh/wazuh_managers/services-router.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wazuh-loadbalancer
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wazuh-loadbalancer
  template:
    metadata:
      labels:
        app: wazuh-loadbalancer
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 1514
        - containerPort: 1515
        volumeMounts:
        - name: config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
      volumes:
      - name: config
        configMap:
          name: nginx-lb-config

---
apiVersion: v1
kind: Service
metadata:
  name: wazuh-loadbalancer
spec:
  type: LoadBalancer
  ports:
  - port: 1514
    targetPort: 1514
    protocol: TCP
    name: agent-report
  - port: 1515
    targetPort: 1515
    protocol: TCP
    name: agent-register
  selector:
    app: wazuh-loadbalancer
