wazuh/wazuh_managers/wazuh-workers-svc.yaml
# Copyright (C) 2019, Wazuh Inc.
#
# This program is a free software; you can redistribute it
# and/or modify it under the terms of the GNU General Public
# License (version 2) as published by the FSF - Free Software
# Foundation.

# Wazuh workers service: Agent reporting

apiVersion: v1
kind: Service
metadata:
  name: wazuh-workers
  labels:
    app: wazuh-manager
    # dns: route53
spec:
  type: ClusterIP
  selector:
    app: wazuh-manager
    node-type: worker
  ports:
    - name: agents-events
      port: 1514
      targetPort: 1514
